test/corpus/allocator.txt
==================
Primitive allocator and typed allocation
==================
fn output(context: rawptr) Allocator {
  return #allocator(context, &allocate)
}
fn items(output: Allocator, count: usize) #AllocResult([]u64) {
  return #alloc_slice(u64, output, count)
}
fn main() {
  output: Allocator
  value := #alloc_or_panic(u64, output)
  bytes := #alloc_slice_uninit_or_panic(u8, output, 16)
}

---

(source_file
  (declaration
    (fn
      (identifier)
      (fn_param
        (identifier)
        (type_qualifier
          (type
            (primitive))))
      (type
        (primitive))
      (block
        (statement
          (return_
            (expression
              (primary
                (allocator
                  (expression
                    (primary
                      (identifier)))
                  (expression
                    (unary_prefix
                      (expression
                        (primary
                          (identifier)))))))))))))
  (declaration
    (fn
      (identifier)
      (fn_param
        (identifier)
        (type_qualifier
          (type
            (primitive))))
      (fn_param
        (identifier)
        (type_qualifier
          (type
            (primitive))))
      (type
        (allocation_result_type
          (type
            (array_type
              (type
                (primitive))))))
      (block
        (statement
          (return_
            (expression
              (primary
                (allocation
                  (type
                    (primitive))
                  (expression
                    (primary
                      (identifier)))
                  (expression
                    (primary
                      (identifier)))))))))))
  (declaration
    (fn
      (identifier)
      (block
        (statement
          (variable
            (identifier)
            (type_qualifier
              (type
                (primitive)))))
        (statement
          (variable
            (identifier)
            (expression
              (primary
                (allocation
                  (type
                    (primitive))
                  (expression
                    (primary
                      (identifier))))))))
        (statement
          (variable
            (identifier)
            (expression
              (primary
                (allocation
                  (type
                    (primitive))
                  (expression
                    (primary
                      (identifier)))
                  (expression
                    (literal
                      (number_))))))))))))
